--- a/unidad 3/clase 1/index.html
+++ b/unidad 3/clase 1/index.html
@@ -25,6 +25,36 @@
 
         <button @click="suma">suma</button>
 
+        <hr>
+
+        <input type="text" v-model="age">
+        <button>
+            Revisar
+        </button>
+
+        <h1 v-if=" age >= 18">
+            Pase
+        </h1>
+        <h1 v-if=" age < 18">
+            No Pase
+        </h1>
+
+        <hr>
+
+        <ol>
+
+            <li v-for="item in chamacos">
+                {{ item.name }}: <span>{{ item.role }}</span>
+            </li>
+
+        </ol>
+
+        <input type="text" v-model="name_chamaco">
+        <input type="text" v-model="role_chamaco">
+        <button @click="save">
+            Save chamaco
+        </button>
+
     </div>
 
 <script type="text/javascript">
@@ -39,6 +69,10 @@
             num1 : "",
             num2 : "",
             res : "",
+            age : 0,
+            chamacos : [{name : 'juanito', role : 'comer'}, {name : 'pedrito', role: 'correr'}],
+            name_chamaco:"",
+            role_chamaco:"",
         }
         },
         methods: {
@@ -47,8 +81,10 @@
             },
             suma(){
                 this.res = "" + (parseInt(this.num1) + parseInt(this.num2));
+            },
+            save(){
+                this.chamacos.push({name:this.name_chamaco, role:this.role_chamaco});
             }
-
         }
 
     }).mount('#contenedor')
